--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
-
+    "deploy": "gh-pages -d dist",
+    "test": "npm run test"
   },
   "dependencies": {
     "react": "^18.3.1",
